--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WebService-LastFM-TrackInfo
 
 {{$NEXT}}
+    - Add the ability to search for artist info.
+    - Improve documentation.
 
 0.0201 2022-06-05 11:00:06
     - Fix response handling logic.
