--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for WebService-LastFM-TrackInfo
 
 {{$NEXT}}
+    - Improve documentation slightly.
 
 0.0204 2022-06-06 21:50:54
     - Add another test case.
