--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for WebService-LastFM-TrackInfo
 
 {{$NEXT}}
     - Improve documentation slightly.
+    - Make the ".getInfo" part of the method an internal thing.
 
 0.0204 2022-06-06 21:50:54
     - Add another test case.
