--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for WebService-LastFM-TrackInfo
 
 {{$NEXT}}
+    - Avoid implicit imports.
 
 0.0205 2022-06-06 22:13:33
     - Improve documentation slightly.
